--- a/style.css
+++ b/style.css
@@ -22,6 +22,7 @@ header img{
     font-size: 3em;
     display: flex;
     text-align: center;
+    font-family: raleway;
 }
 
 .search{
@@ -68,15 +69,16 @@ form input{
 
 .container{
     display: flex;
-    padding-bottom: 200px;
+    
 }
 
 .menu{
     display: flex;
-    width: 25%;
+    width: auto;
     flex-direction: column;
     border-right: 2px ridge white;
     height: auto;
+    padding-bottom: 200px;
 }
 
 .menu a{
@@ -85,27 +87,58 @@ form input{
     font-family: Raleway;
     font-size: 2em;
     padding: 15px;
+    font-style: italic;
     width: max-content;
+}
+
+.menu a:nth-child(1){
+    color: greenyellow;
 }
 
 .menu a:hover{
     text-decoration: underline;
+    color: greenyellow;
 }
 
 
 
 .content{
     padding-top: 30px;
-    width: 75%;
+    width: 100%;
     display: flex;
     text-align: center;
     color: white;
-    font-family: cursive;
+    font-family: raleway;
     justify-content: center;
     font-size: 2em;
     font-style: italic;
     flex-direction: column;
     align-items: center;
+    padding-bottom: 200px;
+}
+
+.content input{
+    width: 1.3em;
+    height: 1.3em;
+    background-color: white;
+
+}
+
+.content p{
+    font-style: normal;
+    font-size: 1rem;
+}
+
+.content p a{
+    text-decoration: none;
+    color: rgb(42, 105, 251);
+    background-color: unset;
+    border: none;
+}
+
+.content p a:hover{
+    text-decoration: underline;
+    color: rgb(42, 105, 251);
 }
 
 .spisok{
@@ -140,14 +173,75 @@ form input{
     margin-bottom: 3em;
 }
 
+.content a:hover{
+    color: black;
+    border-color: black;
+}
 
 .messi{
     background-size: cover;
-    background-image: url(img/mesi.jpg);
-    width: 18em;
+    background-image: url(img/back.jpg);
+    width: 20em;
     height: 15em;
     display: flex;
-    border: 3px solid white;
     align-items: flex-end;
     justify-content: center;
+}
+
+footer{
+    display: flex;
+    flex-direction: column;
+    background-color: rgb(0, 0, 0);
+    color: white;
+    align-items: center;
+    justify-content: center;
+    font-family: raleway;
+    border-top: 2px solid white;
+    font-size: 1.3em;
+    padding-top: 40px;
+    padding-bottom: 40px;
+}
+
+hr{
+    width: 60%;
+}
+
+.foot{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.questions{
+    display: flex;
+    flex-direction: column;
+    color: white;
+    font-family: raleway;
+    font-style: italic;
+    font-size: 22px;
+}
+
+.questions a{
+    text-decoration: none;
+    color: white;
+    font-size: 15px;
+    font-style: normal;
+    width: max-content;
+}
+
+.questions a:hover{
+    text-decoration: underline;
+}
+
+.images{
+    display: flex;
+    justify-content: center;
+
+}
+
+.images img{
+    width: 3em;
+    height: 3em;
+    padding-right: 15px;
 }
