--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body{
     margin: 0;
     background-image: url(img/bg.jpg);
+    background-repeat: no-repeat;
+    background-size: cover;
 }
 
 header{
@@ -42,8 +44,6 @@ header img{
     background-color: unset;
     border-radius: 50%;
     border: 2px solid;
-    
-
 }
 
 form{
@@ -58,6 +58,7 @@ form input{
     font-style: italic;
     font-size: 1em;
     color: white;
+    outline: none;
 }
 
 .search button:hover{
@@ -66,19 +67,13 @@ form input{
     border-left: solid 2px white;
     
 }
-
-.container{
-    display: flex;
-    
-}
-
 .menu{
     display: flex;
-    width: auto;
-    flex-direction: column;
-    border-right: 2px ridge white;
+    width: 100%;
+   justify-content: space-around;
+    border-bottom: 2px ridge white;
     height: auto;
-    padding-bottom: 200px;
+    
 }
 
 .menu a{
@@ -114,7 +109,6 @@ form input{
     font-style: italic;
     flex-direction: column;
     align-items: center;
-    padding-bottom: 200px;
 }
 
 .content input{
@@ -181,7 +175,7 @@ form input{
 .messi{
     background-size: cover;
     background-image: url(img/back.jpg);
-    width: 20em;
+    width: 70%;
     height: 15em;
     display: flex;
     align-items: flex-end;
@@ -244,4 +238,47 @@ hr{
     width: 3em;
     height: 3em;
     padding-right: 15px;
+}
+
+.info{
+    width: 100%;
+    display: flex;
+    padding: 40px 0px;
+    color: white;
+    justify-content: space-evenly;
+}
+
+.foto{
+    width: 100%;
+    height: 70%;
+    background-image: url(img/stray.jpg);
+    background-size: cover;
+}
+
+.card{
+    background-color: rgb(0, 0, 0);
+    width: 14em;
+    height: 18em;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    color: white;
+    font-family: raleway;
+    align-items: center;
+    text-align: center;
+    border: 1px solid greenyellow;
+    border-bottom-left-radius: 15px;
+    border-bottom-right-radius:15px ;
+    
+}
+
+.card h3, h5, h6{
+    margin: 0;
+}
+
+h1{
+    color: white;
+    text-align: center;
+    font-family: raleway;
+    font-style: italic;
 }
