--- a/style.css
+++ b/style.css
@@ -174,7 +174,7 @@ form input{
 
 .messi{
     background-size: cover;
-    background-image: url(img/back.jpg);
+    background-image: url(img/messi.jpg);
     width: 70%;
     height: 15em;
     display: flex;
@@ -231,7 +231,6 @@ hr{
 .images{
     display: flex;
     justify-content: center;
-
 }
 
 .images img{
@@ -251,7 +250,7 @@ hr{
 .foto{
     width: 100%;
     height: 70%;
-    background-image: url(img/stray.jpg);
+    background-image: url(img/strray.jpg);
     background-size: cover;
 }
 
