--- a/main.css
+++ b/main.css
@@ -3,7 +3,6 @@
     display: flex;
     padding: 10px 0px;
     justify-content: space-between;
-   
 }
 
 .sort button{
@@ -12,46 +11,69 @@
     border: none;
 }
 
-
-
-.menu a:nth-child(2){
-    color: greenyellow;
-}
-
-.menu a:nth-child(1){
-    color: white;
-}
-
-.menu a:hover{
-    color: greenyellow;
-}
-
 .tovar{
-    background-color: lightgray;
+    background-color: lightcyan;
     width: 190px;
     height: 300px;
     display: flex;
     align-items: center;
     flex-direction: column;
     justify-content: space-between;
-    
+    margin-bottom: 25px;
+    padding: 5px;
+    transition: 0.5s;
+}
+
+.tovar:hover img{
+    height: 100%;
+    transition: 0.6s;
+}
+
+.tovar:hover p{
+    display: none;
+    transition: 0.3s;
+}
+
+.tovar:hover h4{
+    display: none;
+    transition: 0.3s;
+}
+
+.tovar:hover{
+    background-color: initial;
+    justify-content: center;
+}
+
+.tovar:hover a{
+    width: 85%;
+    text-align: center;
+    transition: 0.4s;
+    background-color: greenyellow;
+    color: black;
 }
 
 .tovar h4{
     margin: 5px 0;
+    color: black;
+    font-weight: 600;
+    width: 100%;
+    text-align: center;
+    padding: 5px 0;
+    transition: 0.3s;
 }
 
 .tovar p{
     margin: 0;
     font-size: 14px;
+    transition: 0.5s;
 }
-
 
 .tovar img{
     width: 100%;
     height: 65%;
     color: black;
-    
+    z-index: 1;
+    transition: 0.6s;
 }
 
 .catalog{
@@ -65,14 +87,9 @@
     background-color: black;
     padding: 5px 15px 6px 15px;
     font-size: 16px;
-}
-
-.invisible{
-    width: 100%;
-    display: flex;
-    justify-content: flex-end;
+    transition: 0.5s;
 }
 
 .tovar a:hover{
-    color: red;
+    transition: 0.3s;
 }
