--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ body{
     font-family: 'Roboto', sans-serif;
     margin-left: 100px;
     margin-right: 100px;
+    
 }
 
 a{
@@ -67,6 +68,10 @@ header img{
     color: white;
 }
 
+.op a{
+    color: white;
+}
+
 .reg{
     width: 100%;
     display: flex;
@@ -121,15 +126,16 @@ form input{
     font-size: 16px;
     padding: 5px;
     width: max-content;
+    border-radius: 5px;
+    transition: 0.4s;
 }
 
-.menu a:nth-child(1){
-    color: greenyellow;
-}
+
 
 .menu a:hover{
-    text-decoration: underline;
-    color: greenyellow;
+    color: black;
+    background-color: greenyellow;
+    transition: 0.4s;
 }
 
 
@@ -173,6 +179,12 @@ form input{
     background-color: greenyellow;
     color: black;
     font-weight: 700;
+    transition: 0.3s;
+}
+
+.big-text a:hover{
+    background-color: rgb(119, 177, 33);
+    transition: 0.3s;
 }
 
 .information{
@@ -205,6 +217,8 @@ form input{
     background-color: rgba(28, 28, 28, 0.945);
     font-size: 14px;
     color: white;
+    border: 1px solid greenyellow;
+    border-radius: 5px;
 
 }
 
@@ -328,14 +342,23 @@ hr{
     margin-bottom: 30px;
     border: 1px solid greenyellow;
     padding: 5px 10px;
+    border-radius: 5px;
     background-color: rgba(0, 0, 0, 0.581);
+    transition: 0.3s;
 
 }
 
 .card a:hover{
-    text-decoration: underline;
+    background-color: greenyellow;
+    color: black;
+    transition: 0.3s;
 }
 
+.mapa{
+    display: flex;
+    width: 100%;
+    justify-content: space-between;
+}
 
 
 
